--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   google_fonts: ^6.1.0
+  transparent_image: ^2.0.1
 
 dev_dependencies:
   flutter_test:
@@ -19,4 +20,4 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - assets/img/InverNova.jpg
+    - assets/img/
